fix: spacing and mobile

--- a/src/components/HardSkills/hardSkills.module.css
+++ b/src/components/HardSkills/hardSkills.module.css
@@ -31,6 +31,5 @@
 @media (max-width: 1024px) {
   .hardSkills {
     max-width: 100%;
-    padding-left: 13%;
   }
 }
