--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -1,10 +1,10 @@
-/* :root {
+:root {
   --h1Size:36px;
   --h2Size:24px;
   --h3Size:20px;
   --h5Size:20px;
   --pSize:20px;
-} */
+}
 
 h1 {
   font-size: var(--h1Size);
@@ -87,5 +87,10 @@ body {
     max-width: 100%;
     justify-content: flex-start;
     padding: 50px 10px;
+  }
+
+  .main-content {
+    flex-direction: column;
+    padding-left: 20px;
   }
 }
